--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "start": "vue-cli-service serve"
+    "start": "vue-cli-service serve",
+    "deploy": "node Scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "@mdi/js": "^5.2.45",
@@ -40,7 +41,8 @@
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.4.3"
+    "vuetify-loader": "^1.4.3",
+    "execa": "latest"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
